# vision

./: .gitignore  README.md  pyproject.toml
nbs/: mnist_lenet.ipynb  resnets.ipynb  vit.ipynb
nbs/generative/autoencoders/: autoencoder.ipynb  vae.ipynb  vq_vae.ipynb
nbs/video/: timesformer.ipynb
src/: attention2D.py  ddpm.py
src/vision/: README.md  attention2D.py  autoencoders.py  resnet.py  unet.py
src/vision/transformers/: attention.py  blocks.py
